--- a/src/style/base.css
+++ b/src/style/base.css
@@ -6,6 +6,17 @@
     opacity: 1;
 }
 
+/* hide scrollbar but allow scrolling */
+body {
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll; 
+}
+
+body::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+}
+
 .noScroll{
     height:100%;
     margin:0;
