--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,9 @@
 ---
+import { Image } from "@astrojs/image/components";
 import Container from "@components/container.astro";
 import Postlist from "@components/postlist.astro";
 import Layout from "@layouts/Layout.astro";
+import BlogCard from "@components/blogcard.astro";
 // import { latestPosts } from "@utils/content";
 
 import { fetchPosts } from '../utils/wpPosts';
@@ -14,6 +16,84 @@ const postContents = await wpPosts.json();
 <Layout title="">
   <Container>
     <main>
+      <div class="flex flex-col lg:flex-row grow w-full h-full min-h-[500px] m-0 p-0 items-center justify-between mb-28">
+        <div class="left w-full">
+          <div class="prose">
+			<h1 class="text-5xl text-black">Access Exclusive Mockups and Design Resources With a Membership</h1>
+      <p>Expand your design horizons and gain access to exclusive mockups</p>
+      <p></p>
+      <div>
+      <div><a href="https://1.envato.market/caards/">Buy Now</a></div>
+      </div>
+      </div>
+      </div>
+        <div class="right flex flex-col  lg:flex-row grow items-center justify-between w-full gap-10">
+          <div class="left flex items-center justify-center">
+            <section class="shadow-lg mx-auto max-w-sm">
+              <img class="w-full h-auto" src="https://weandthecolor.com/wp-content/uploads/2012/03/Alternate-Ending-Illustration-by-Matheus-Lopes-3454646.jpg" alt="">
+              <div class="p-7 my-auto pb-10 ">
+                  <h1 class="text-2xl font-semibold text-gray-800">Alternate Ending</h1>
+                  <p class="text-base text-gray-400 mt-2">
+                      Super creative and colorful illustrations by Matheus Lopes. Check out more of his amazing artworks in his portfolio.
+                  </p>
+              </div>
+          </section>
+          </div>
+          <div class="right flex items-center justify-center">
+            <section class="shadow-lg mx-auto max-w-sm">
+              <img class="w-full h-auto" src="https://weandthecolor.com/wp-content/uploads/2012/03/Alternate-Ending-Illustration-by-Matheus-Lopes-3454646.jpg" alt="">
+              <div class="p-7 my-auto pb-10 ">
+                  <h1 class="text-2xl font-semibold text-gray-800">Alternate Ending</h1>
+                  <p class="text-base text-gray-400 mt-2">
+                      Super creative and colorful illustrations by Matheus Lopes. Check out more of his amazing artworks in his portfolio.
+                  </p>
+              </div>
+          </section>
+          </div>
+        </div>
+      </div>
+        
+      <section class="mx-auto flex flex-col lg:flex-row gap-10 mb-10">
+        <BlogCard
+        cathref="/category/digital-culture"
+        category="Digital Culture"
+        title="A Really Cool Title Here"
+        articlehref="/article/social-media-guidelines-for-teens"
+        excerpt="New social media recommendations for teens focus on preventing harm"
+        image="https://weandthecolor.com/wp-content/uploads/2012/03/Alternate-Ending-Illustration-by-Matheus-Lopes-3454646.jpg"
+        alt="A teen holds a phone in her hands."
+        /> 
+        <BlogCard
+        cathref="/category/digital-culture"
+        category="Digital Culture"
+        title="A Really Cool Title Here"
+        articlehref="/article/social-media-guidelines-for-teens"
+        excerpt="New social media recommendations for teens focus on preventing harm"
+        image="https://helios-i.mashable.com/imagery/articles/05sTeIg6S6cN3JETViYsLF8/hero-image.fill.size_672x378.v1683574309.jpg"
+        alt="A teen holds a phone in her hands."
+        /> 
+        <BlogCard
+        cathref="/category/digital-culture"
+        category="Digital Culture"
+        title="A Really Cool Title Here"
+        articlehref="/article/social-media-guidelines-for-teens"
+        excerpt="New social media recommendations for teens focus on preventing harm"
+        image="https://helios-i.mashable.com/imagery/articles/05sTeIg6S6cN3JETViYsLF8/hero-image.fill.size_672x378.v1683574309.jpg"
+        alt="A teen holds a phone in her hands."
+        /> 
+        <BlogCard
+        cathref="/category/digital-culture"
+        category="Digital Culture"
+        title="A Really Cool Title Here"
+        articlehref="/article/social-media-guidelines-for-teens"
+        excerpt="New social media recommendations for teens focus on preventing harm"
+        image="https://helios-i.mashable.com/imagery/articles/05sTeIg6S6cN3JETViYsLF8/hero-image.fill.size_672x378.v1683574309.jpg"
+        alt="A teen holds a phone in her hands."
+        /> 
+    </section>
+
+    
+</div>
       <div class="grid gap-10 lg:gap-10 md:grid-cols-2">
         {
           postContents.data.posts.nodes
